# lung_cancer_ANN

./: README.md  app.py  best_model.keras  evaluate.py  main.py  model.py  preprocessing.py  pyproject.toml  scaler.pkl  train.py
tests/: test_ann.py
