[project]
name = "module5-ann"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "plotly>=6.8.0",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
]
